# solar-logger-sqlite

./: LICENSE.DE.TXT  LICENSE.KOPF.TXT  freetz-1.1.3.patch  freetz-stable-1.1-r5268.patch
mocktty/: .project  README.txt  analyze_logfile.rb  mockdata.yaml  mocktty.sh  serialmock.rb
scripts/: crontab.txt  restart.sh  solar-logger.ini  solar-logger.sh  sync.sh  sync_functions.sh  watchdog.sh  yasdi.ini
scripts/mocktty/: mocktty.sh  solar-logger.ini
scripts/rs485/: poll.sh  read_modbus.rb  write_bin_request.rb
scripts/solarsim/: solar-logger.ini  sync.sh
src/: .cproject  .gitignore  .project  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  daemon.c  daemon.h  env  ftp.c  ftp.h  ini.c  ini.h  kanalrech.c  kanalrech.h  kill.sh  log.c  log.h  logsqlite3.c  logsqlite3.h  logsunmeter.c  logsunmeter.h  makefile  solar-logger.c  solar-logger.h  solar-logger.ini  sollog.c  sollog.h  solstatus.c  solstatus.h  solueberwachen.c  solueberwachen.h  sqlite3common.c  sqlite3common.h  timer.c  timer.h  wrabfragen.c  (+4 more)
test/: README.txt  analyze_logfile.rb  chat.txt  mockdata.yaml  serialmock.rb
working-directory/: solar-logger.ini
