bin_PROGRAMS = solar-logger
solar_logger_SOURCES = daemon.c  ini.c        log.c         logsunmeter.c   sollog.c     solueberwachen.c  timer.c       wrerfassen.c kanalrech.c logsqlite3.c solar-logger.c solstatus.c sqlite3common.c wrabfragen.c
solar_logger_LDADD = @LIBOBJS@
solar_logger_LDFLAGS = -pthread